feat: new function for writing responses
