# http_server/api/httpx/task.go
@@ -58,9 +58,10 @@ func NewTaskHandler(service usecases.Task) *Task {
 // @Produce json
 // @Param id path string true "Id of the task"
 // @Param Authorization header string true "Bearer token for authentication"
-// @Success 200 {task} types.GetTaskStatusHandlerResponse
-// @Failure 400 {string} string "Bad request"
-// @Failure 404 {string} string "Task not found"
+// @Success 200 {object} dto.GetTaskStatusHandlerResponse
+// @Failure 400 {object} HTTPError "Bad request"
+// @Failure 404 {object} HTTPError "Task not found"
+// @Failure 401 {object} HTTPError "Unauthorized"
 // @Router /task/status/{id} [get]
 func (s *Task) getStatusHandler(w http.ResponseWriter, r *http.Request) {
 	authToken, err := GetAuthToken(r)
@@ -77,12 +78,17 @@ func (s *Task) getStatusHandler(w http.ResponseWriter, r *http.Request) {
 
 	id, err := uuid.Parse(req.Id)
 	if err != nil {
-		WriteResponse(w, api.ErrBadRequest{Field: "id", Err: err.Error()}, nil)
+		WriteError(w, api.ErrBadRequest{Field: "id", Err: err.Error()})
 		return
 	}
 
 	taskStatus, err := s.service.GetStatus(id)
-	WriteResponse(w, err, &dto.GetTaskStatusHandlerResponse{Status: taskStatus})
+	if err != nil {
+		WriteError(w, err)
+		return
+	}
+
+	WriteSuccess(w, &dto.GetTaskStatusHandlerResponse{Status: taskStatus}, http.StatusOK)
 }
 
 // @Summary Get a task result
@@ -92,9 +98,10 @@ func (s *Task) getStatusHandler(w http.ResponseWriter, r *http.Request) {
 // @Produce json
 // @Param id path string true "Id of the task"
 // @Param Authorization header string true "Bearer token for authentication"
-// @Success 200 {task} types.GetTaskResultHandlerResponse
-// @Failure 400 {string} string "Bad request"
-// @Failure 404 {string} string "Task not found"
+// @Success 200 {task} dto.GetTaskResultHandlerResponse
+// @Failure 400 {object} HTTPError "Bad request"
+// @Failure 404 {object} HTTPError "Task not found"
+// @Failure 401 {object} HTTPError "Unauthorized"
 // @Router /task/result/{id} [get]
 func (s *Task) getResultHandler(w http.ResponseWriter, r *http.Request) {
 	authToken, err := GetAuthToken(r)
@@ -112,12 +119,17 @@ func (s *Task) getResultHandler(w http.ResponseWriter, r *http.Request) {
 	id, err := uuid.Parse(req.Id)
 
 	if err != nil {
-		WriteResponse(w, api.ErrBadRequest{Field: "id", Err: err.Error()}, nil)
+		WriteError(w, api.ErrBadRequest{Field: "id", Err: err.Error()})
 		return
 	}
 
 	taskResult, err := s.service.GetResult(id)
-	WriteResponse(w, err, dto.GetTaskResultHandlerResponse{Result: taskResult})
+	if err != nil {
+		WriteError(w, err)
+		return
+	}
+
+	WriteSuccess(w, dto.GetTaskResultHandlerResponse{Result: taskResult}, http.StatusOK)
 }
 
 // @Summary Create an task
@@ -128,8 +140,9 @@ func (s *Task) getResultHandler(w http.ResponseWriter, r *http.Request) {
 // @Param translation_data body types.PostTaskHandlerRequest true "task code and translator"
 // @Param Authorization header string true "Bearer token for authentication"
 // @Success 201 {task} types.PostTaskHandlerResponse
-// @Failure 400 {string} string "Bad request"
+// @Failure 400 {object} HTTPError "Bad request"
 // @Router /task [post]
+
 func (s *Task) postHandler(w http.ResponseWriter, r *http.Request) {
 	authToken, err := GetAuthToken(r)
 	if err != nil {
@@ -143,35 +156,26 @@ func (s *Task) postHandler(w http.ResponseWriter, r *http.Request) {
 	}
 	req, err := CreatePostTaskHandlerRequest(r)
 	if err != nil {
-		WriteResponse(w, err, nil)
+		WriteError(w, err)
 		return
 	}
 
 	taskTranslator, err := models.ParseTranslator(req.TaskTranslator)
 
 	if err != nil {
-		WriteResponse(w, api.ErrBadRequest{Field: "task_translator", Err: err.Error()}, nil)
+		WriteError(w, api.ErrBadRequest{Field: "task_translator", Err: err.Error()})
 		return
 	}
 
 	newTask := models.Task{Id: uuid.New(), Code: req.TaskCode, Translator: taskTranslator, Status: models.StatusInProgress, Result: "progres..."}
 
 	err = s.service.Post(newTask)
-	WriteResponse(w, err, dto.PostTaskHandlerResponse{ID: newTask.Id.String()})
-}
-
-func (s *Task) commitHandler(w http.ResponseWriter, r *http.Request) {
-	var task models.Task
-	if err := json.NewDecoder(r.Body).Decode(&task); err != nil {
-		http.Error(w, "error while decoding json", http.StatusInternalServerError)
-		return
-	}
-	err := s.service.Put(task)
 	if err != nil {
-		http.Error(w, "error putting task", http.StatusInternalServerError)
+		WriteError(w, err)
 		return
 	}
-	w.WriteHeader(200)
+
+	WriteSuccess(w, dto.PostTaskHandlerResponse{ID: newTask.Id.String()}, http.StatusCreated)
 }
 
 // WithtaskHandlers registers task-related HTTP handlers.
@@ -179,7 +183,6 @@ func (s *Task) WithTaskHandlers(r chi.Router) {
 	r.Route("/task", func(r chi.Router) {
 		r.Get("/status/{id}", s.getStatusHandler)
 		r.Get("/result/{id}", s.getResultHandler)
-		r.Post("/commit", s.commitHandler)
 		r.Post("/", s.postHandler)
 	})
 }
