# http_server/docs/swagger.json
@@ -9,53 +9,6 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/task": {
-            "post": {
-                "description": "Create a new task with the specified key and value",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "task"
-                ],
-                "summary": "Create an task",
-                "parameters": [
-                    {
-                        "description": "task code and translator",
-                        "name": "translation_data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/types.PostTaskHandlerRequest"
-                        }
-                    },
-                    {
-                        "type": "string",
-                        "description": "Bearer token for authentication",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "type": "task"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/task/result/{id}": {
             "get": {
                 "description": "Get a task result by its id",
@@ -95,13 +48,19 @@
                     "400": {
                         "description": "Bad request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/httpx.HTTPError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/httpx.HTTPError"
                         }
                     },
                     "404": {
                         "description": "Task not found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/httpx.HTTPError"
                         }
                     }
                 }
@@ -140,19 +99,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "task"
+                            "$ref": "#/definitions/dto.GetTaskStatusHandlerResponse"
                         }
                     },
                     "400": {
                         "description": "Bad request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/httpx.HTTPError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/httpx.HTTPError"
                         }
                     },
                     "404": {
                         "description": "Task not found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/httpx.HTTPError"
                         }
                     }
                 }
@@ -171,11 +136,11 @@
                 "parameters": [
                     {
                         "description": "user login and password",
-                        "name": "name",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/types.PostUserLoginHandlerRequest"
+                            "$ref": "#/definitions/dto.PostUserLoginHandlerRequest"
                         }
                     }
                 ],
@@ -183,19 +148,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "user"
+                            "$ref": "#/definitions/dto.PostUserLoginHandlerResponse"
                         }
                     },
                     "400": {
                         "description": "Bad request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/httpx.HTTPError"
                         }
                     },
                     "404": {
                         "description": "Not found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/httpx.HTTPError"
                         }
                     }
                 }
@@ -214,11 +179,11 @@
                 "parameters": [
                     {
                         "description": "user login and password",
-                        "name": "name",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/types.PostUserRegisterHandlerRequest"
+                            "$ref": "#/definitions/dto.PostUserRegisterHandlerRequest"
                         }
                     }
                 ],
@@ -226,16 +191,16 @@
                     "201": {
                         "description": "Created"
                     },
-                    "208": {
-                        "description": "Key already exists",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
                     "400": {
                         "description": "Bad request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/httpx.HTTPError"
+                        }
+                    },
+                    "409": {
+                        "description": "Key already exists",
+                        "schema": {
+                            "$ref": "#/definitions/httpx.HTTPError"
                         }
                     }
                 }
@@ -243,18 +208,15 @@
         }
     },
     "definitions": {
-        "types.PostTaskHandlerRequest": {
+        "dto.GetTaskStatusHandlerResponse": {
             "type": "object",
             "properties": {
-                "task_code": {
-                    "type": "string"
-                },
-                "task_translator": {
+                "status": {
                     "type": "string"
                 }
             }
         },
-        "types.PostUserLoginHandlerRequest": {
+        "dto.PostUserLoginHandlerRequest": {
             "type": "object",
             "properties": {
                 "password": {
@@ -265,13 +227,29 @@
                 }
             }
         },
-        "types.PostUserRegisterHandlerRequest": {
+        "dto.PostUserLoginHandlerResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.PostUserRegisterHandlerRequest": {
             "type": "object",
             "properties": {
                 "password": {
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "httpx.HTTPError": {
+            "type": "object",
+            "properties": {
+                "error": {
                     "type": "string"
                 }
             }
